# Glimpse

./: .gitignore  EXPLORATION_SUMMARY.txt  PROJECT_STRUCTURE_ANALYSIS.md  README.md  USAGE.md  build.bat  dev.bat  package.json
src/: index.html  main.js  selector.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  ocr.rs  ocr.rs.bak  qr_scanner.rs  screenshot.rs  selector_window.rs  tray.rs
